Added i18n tokens added throughout. Added XL Honey and XL Cheeze and changed machine rules to fit for cheesepress, honeymaker, and keg. Fixed Lance/Apples gift tastes warning.

--- a/[CP] Joja Machines/i18n/default.json
+++ b/[CP] Joja Machines/i18n/default.json
@@ -1,15 +1,42 @@
 {
+//NPCs
+"Adam.Joja_Amber": "Amber",
+//NPC Gift Tastes
+"Adam.Joja_GiftTastes.Shanejojaitem": "Eh, I'll take it.",
+"Adam.Joja_GiftTastes.ShaneBeer": "I know it's from Joja, but I can't pass up a free beer.",
+"Adam.Joja_GiftTastes.Pierrejojaitem": "Ugh, take this away from me! Why would you even give me this junk?",
+"Adam.Joja_GiftTastes.HarveyPickle": "Crunchy and sweet. They aren't the best pickles I've ever had, but overall not bad. Especially considering that they came from Joja.",
+"Adam.Joja_GiftTastes.HarveyCoffee": "It may taste like used motor oil, but it does perk you up in the morning.",
+"Adam.Joja_GiftTastes.CarolineBlueTea": "Ooohh Blue Tea! Uh, don't tell Pierre that I accepted this.",
+"Adam.Joja_GiftTastes.VincentCheeze": "Is that Joja Cheeze! We got some in the mail but mom wouldn't let me have it. I won't tell her you gave me some.$h",
+"Adam.Joja_GiftTastes.VincentXLCheeze": "They make an XL size! Thanks @. You're the best!$h",
+"Adam.Joja_GiftTastes.Pamjojaitem": "I don't know why everyone around here is against Joja? They make some decent stuff you know? Thanks kid.",
+"Adam.Joja_GiftTastes.Alexjojaitem": "I could destroy this right now but it'd probably make me sick. Eh, it's worth it.",
+"Adam.Joja_GiftTastes.Jodijojaitem": "I was just about to head over to Joja to pick some of this up. Thanks @!",
+"Adam.Joja_GiftTastes.Samjojaitem": "Oh yeah! I love me some Joja snacks!",
+"Adam.Joja_GiftTastes.WillyDriedFish": "Ah I could use some of these for my next fishin' trip. Don't necessarily taste that great but they won't go bad when I'm out at sea.",
+"Adam.Joja_GiftTastes.Andyjojaitem": "Ya know Joja's been good to me. I know some people knock Joja, but I appreciate it.$h",
+"Adam.Joja_GiftTastes.AndyBeer": "Haha I love it! Nothin' like a cold Joja Beer after a hard days work.$h",
+"Adam.Joja_GiftTastes.AndyFancy": "That's a little fancier than I'm used to, but I won't complain.$h",
+"Adam.Joja_GiftTastes.ClaireBlueTea": "Hmmm. Blue Tea? It's not as nice as green tea, but it would always keep me warm on the bus ride home. Thank you.",
+"Adam.Joja_GiftTastes.MartinJuice": "Joja says there are 100 vitamins and minerals in each one of these. I doubt it but they still are pretty good though.",
+"Adam.Joja_GiftTastes.Morrisjojaitem": "Are you returning this?#$b#Oh, it's gift. Thank you.",
+"Adam.Joja_GiftTastes.Oliviajojaitem": "No dear. Thank you for trying but this is going directly to the trash where it belongs.",
 //Object Names and Descriptions
 "Adam.Joja_Chum.DisplayName": "Joja Chum",
 "Adam.Joja_Chum.Description": "Place in a Joja Worm Bin to produce a variety of baits.",
 "Adam.Joja_Cheeze.DisplayName": "Joja Cheeze",
 "Adam.Joja_Cheeze.Description": "Spreadable cheese. Goes great on crackers.",
+"Adam.Joja_XLCheeze.DisplayName": "Joja Cheeze XL",
+"Adam.Joja_XLCheeze.Description": "It's extra large! Even more cheese for more crackers.",
 "Adam.Joja_DriedRedMushrooms.DisplayName": "Joja Dried Red Mushrooms",
 "Adam.Joja_DriedRedMushrooms.Description": "Aren't these poisonous?",
 "Adam.Joja_DriedFish.DisplayName": "Joja Dried Fish",
 "Adam.Joja_DriedFish.Description": "Fish dried and salted.",
 "Adam.Joja_Honey.DisplayName": "Joja Honey",
 "Adam.Joja_Honey.Description": "Synthetic honey made without the help of bees.",
+"Adam.Joja_XLHoney.DisplayName": "Joja Honey XL",
+"Adam.Joja_XLHoney.Description": "An extra large jar of synthetic honey made without the help of bees.",
 "Adam.Joja_Wine.DisplayName": "Joja Wine",
 "Adam.Joja_Wine.Description": "They say to enjoy in moderation, buy I don't think I even want to try this.",
 "Adam.Joja_Juice.DisplayName": "Joja Juice",
@@ -40,6 +67,15 @@
 "Adam.Joja_PROrecipeBook.Description": "Contains all of Joja Co's deepest machine secrets.",
 "Adam.Joja_UpgradePack.DisplayName": "Joja Upgrade Pack",
 "Adam.Joja_UpgradePack.Description": "Craft with it and a Joja Machine to upgrade to the PRO level!",
+"Adam.Joja_DriedFish.flavor": "Joja Dried {0}",
+"Adam.Joja_Wine.flavor": "Joja {0} Wine",
+"Adam.Joja_Juice.flavor": "Joja {0} Juice",
+"Adam.Joja_AgedRoe.flavor": "Joja Aged {0} Roe",
+"Adam.Joja_Pickle.flavor": "Joja {0} Pickles",
+"Adam.Joja_Jelly.flavor": "Joja {0} Jelly",
+"Adam.Joja_Honey.flavor": "Joja {0} Honey",
+"Adam.Joja_XLHoney.flavor": "Joja XL {0} Honey",
+"Adam.Joja_Mead.flavor": "Joja {0} Mead",
 //Machines
 "Adam.Joja_Keg.DisplayName": "Joja Keg",
 "Adam.Joja_Keg.Description": "Make your own artisan products at home with a new and improved keg design from Joja! Now faster than ever before!",
@@ -75,6 +111,8 @@
 "Adam.Joja_SeedMaker.Description": "Place produce, forage, or flowers inside to get mixed seeds, seasonal seeds, mixed flower seeds, or a random sapling.",
 "Adam.Joja_SeedSorter.DisplayName": "Joja Seed Sorter",
 "Adam.Joja_SeedSorter.Description": "Place mixed seeds inside to be sorted into seeds depending on the current season. Also a chance to receive rare and ancient seeds!",
+"Adam.Joja_ICM.batterypack": "Requires one battery pack.",
+"Adam.Joja_ICM.tacklebin": "Requires one processed metal bar and a piece of trash.",
 //PRO Machines
 "Adam.Joja_KegPRO.DisplayName": "Joja Keg PRO",
 "Adam.Joja_KegPRO.Description": "Make your own artisan products at home with a new and improved keg design from Joja! Now faster than ever before!",
