Added i18n tokens throughout. Added XL Honey and Cheeze and fixed machine rules to match. Fixed Lance/Apples gift tastes warning.

--- a/[CP] Joja Machines/i18n/default.json
+++ b/[CP] Joja Machines/i18n/default.json
@@ -661,5 +661,5 @@
 "Adam.Joja_GirlsNight.name": "Girls Night Out",
 "Adam.Joja_GirlsNight.text": "All of us ladies need to get together one day for a little relaxation. I thought we could have a little painting party, but we need a few refreshments to go along with the festivities! Could you please bring me 10 Joja Wines before the week is over?",
 "Adam.Joja_GirlsNight.collect": "Produce 10 Joja Wines",
-"Adam.Joja_GirlsNight.deliver": "Bring 10 Joja Wines to Leah",
+"Adam.Joja_GirlsNight.deliver": "Bring 10 Joja Wines to Leah"
 }
