Added CompleteCCJojaPRO event and i18n tokens

--- a/i18n/default.json
+++ b/i18n/default.json
@@ -159,6 +159,17 @@
 "PierreAbandonedJoja.7": "Jackpot!$h#$b#Looks like there's a bunch of machines in here. And brand new too by the look of it.",
 "PierreAbandonedJoja.8": "There's even some crafting recipes in this one.#$b#I should let @ know about this. They'd probably give me a pretty penny for all of it.",
 "PierreAbandonedJoja.9": "What's this...",
+"CompleteCCJojaPRO.0": "So what is in that book anyway?#$b#I just happened to find it laying around but couldn't understand what was inside it.",
+"CompleteCCJojaPRO.1": "What is it?#Looks like a bunch of crafting recipes.#I'm not sure either?",
+"CompleteCCJojaPRO.2": "Can I have a look?#$b#It looks like a technical manual to me possibly.",
+"CompleteCCJojaPRO.3": "Sure come on over Demetrius.#$b#Maybe you can tell us how much it's worth.$h",
+"CompleteCCJojaPRO.4": "Let's see here...",
+"CompleteCCJojaPRO.5": "Wow this is amazing!",
+"CompleteCCJojaPRO.6": "What do you mean?",
+"CompleteCCJojaPRO.7": "It's a manual that contains recipes for an entirely new line of Joja Machines.#$b#It is fairly technical but with this you could craft any Joja PRO Machine you liked. This is an amazing purchase @!$h",
+"CompleteCCJojaPRO.8": "If you need any help @ please let me know. I wouldn't mind diving into that manual myself one day.",
+"CompleteCCJojaPRO.9": "What a deal!",
+"CompleteCCJojaPRO.10": "I should have charged more...$2",
 "MorrisJojaShipmentComplete.0": "I can't believe you did it @! Nobody else at Joja believed in you but I did.$h",
 "MorrisJojaShipmentComplete.1": "This really is a nice place you have here.#$b#Maybe one day I'll move out to the country like this...",
 "MorrisJojaShipmentComplete.2": "But anyway, enough about me. I'm here to talk about you!#$b#When you completed the last Joja Shipment challenge, Joja gave me a huge raise for advancing Joja Machines in the Valley.#$b#As a small token of my appreciaion, I wanted to give you this!$h",
