Update zh.json for new event and change version number

--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -159,17 +159,17 @@
 "PierreAbandonedJoja.7": "发财了！$h#$b#看起来这里有一堆机器，而且全都是全新的。",
 "PierreAbandonedJoja.8": "这个箱子里甚至还有一些制作配方。#$b#我得告诉@这件事。他大概会为这些东西出个好价钱。",
 "PierreAbandonedJoja.9": "这是什么……",
-"CompleteCCJojaPRO.0": "So what is in that book anyway?#$b#I just happened to find it laying around but couldn't understand what was inside it.",
-"CompleteCCJojaPRO.1": "What is it?#Looks like a bunch of crafting recipes.#I'm not sure either?",
-"CompleteCCJojaPRO.2": "Can I have a look?#$b#It looks like a technical manual to me possibly.",
-"CompleteCCJojaPRO.3": "Sure come on over Demetrius.#$b#Maybe you can tell us how much it's worth.$h",
-"CompleteCCJojaPRO.4": "Let's see here...",
-"CompleteCCJojaPRO.5": "Wow this is amazing!",
-"CompleteCCJojaPRO.6": "What do you mean?",
-"CompleteCCJojaPRO.7": "It's a manual that contains recipes for an entirely new line of Joja Machines.#$b#It is fairly technical but with this you could craft any Joja PRO Machine you liked. This is an amazing purchase @!$h",
-"CompleteCCJojaPRO.8": "If you need any help @ please let me know. I wouldn't mind diving into that manual myself one day.",
-"CompleteCCJojaPRO.9": "What a deal!",
-"CompleteCCJojaPRO.10": "I should have charged more...$2",
+"CompleteCCJojaPRO.0": "那本书里面到底是什么？#$b#我只是刚好捡到它，但完全看不懂里面的内容。",
+"CompleteCCJojaPRO.1": "那是什么？#看起来像是一堆制作配方。#我也不太确定？",
+"CompleteCCJojaPRO.2": "我可以看一下吗？#$b#看起来可能是一本技术手册。",
+"CompleteCCJojaPRO.3": "当然，过来看看吧德米特里厄斯。#$b#也许你能告诉我们它值多少钱。$h",
+"CompleteCCJojaPRO.4": "让我看看……",
+"CompleteCCJojaPRO.5": "哇，这太厉害了！",
+"CompleteCCJojaPRO.6": "什么意思？",
+"CompleteCCJojaPRO.7": "这是一本包含全新Joja机器系列配方的手册。#$b#内容相当专业，但有了它，你可以制作任何你想要的Joja PRO机器。这真是一次惊人的购买，@！$h",
+"CompleteCCJojaPRO.8": "如果你需要帮助，@，请告诉我。我也很想哪天好好研究一下那本手册。",
+"CompleteCCJojaPRO.9": "真是赚到了！",
+"CompleteCCJojaPRO.10": "我应该多收点钱….$2",
 "MorrisJojaShipmentComplete.0": "真不敢相信你做到了，@！Joja里没有人相信你，但我一直相信你。$h",
 "MorrisJojaShipmentComplete.1": "你这里真是个不错的地方。#$b#也许有一天我也会搬来乡下生活……",
 "MorrisJojaShipmentComplete.2": "不过先不说我了。我是来谈你的！#$b#当你完成最后一次Joja出货挑战后，Joja因为我在星露谷推广Joja机器而给了我一大笔加薪。#$b#作为一点小小的谢意，我想把这个送给你！$h",
